--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -52,3 +53,4 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/ci-cd-practice:latest
             ghcr.io/${{ github.repository_owner }}/ci-cd-practice:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/ci-cd-practice:${{ github.sha::7 }}
